# coursework_hh_search_vacancy

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: functions.py  hh_api.py  vacancies.py  workfile.py
